<resources>
    <string name="app_name">Login Divisas</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    //////////////////////////////////////
    <string name="login">Iniciar Sesión</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="register">¿No tienes cuenta? Regístrate</string>
    <string name="app_logo">Logo de la aplicación</string>
    <string name="buildacc">Registrarse</string>
    <string-array name="conversion_types">
        <item>De Soles a Dólares</item>
        <item>De Dólares a Soles</item>
    </string-array>
</resources>