<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="60dp"
            android:text="Bienvenido a nuestra plataforma"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo_login"
            android:layout_gravity="center"
            android:contentDescription="@string/app_logo"
            android:layout_marginBottom="50dp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:backgroundTint="@color/button_color"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:padding="12dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/celeste"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp" />



    </LinearLayout>
</FrameLayout>